--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,9 +1,10 @@
 {
   "lang_set_success_message": ":flag_gb: The language was successfully set to English!",
 
-  "game_error_incorrectGameID": "Game not found! It may have been cancelled or ended.",
+  "game_error_incorrectGameID": ":jigsaw: Game not found! It may have been cancelled or ended.",
   "game_error_alreadyCreated": ":point_up: You have already created a game, please cancel it first or wait for autocancel!",
   "game_error_alreadyJoined": ":point_up: You have already joined a game, please leave it first!",
+  "game_create_error_notOnServer": ":man_gesturing_no: Sorry, you can create games on the server only!",
   "game_created_title": "Game Created",
   "game_created_autocancel": "Autocancel",
   "game_created_gameHost": "Game Host",
@@ -57,7 +58,6 @@
   "vote_results_tie": ":man_shrugging: Tie vote",
   "vote_results_ban": " was banned from the city.",
   "role_mafia_name": "Mafia",
-  "vote_results_expulsion": "",
   "role_mafia_placeHolder": "Select your victim...",
   "role_mafia_description": "%KILL AND SURVIVE!\n:skull_crossbones:  Every night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\n:trophy:  The mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\n:busts_in_silhouette:  Your teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
@@ -90,12 +90,12 @@
   "role_embed_spawnFrom_name": "Minimal number of players to spawn",
   "role_embed_selfSelectable_name": "Is self selectable?",
   "role_embed_count_name": "Count",
-  "role_embed_placeHolder_name": "Placeholder for action menu",
+  "role_embed_placeHolder_name": "Placeholder for the action menu",
   "role_embed_delay_name": "Delay between actions",
   "condition_embed_condition_name": "Condition",
   "condition_embed_embedTitle_name": "Title",
   "condition_embed_embedDescription_name": "Description",
-  "condition_embed_winRole_name": "Winning Role",
+  "condition_embed_winRole_name": "Winning role",
 
   "profile_title": "Your profile :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Mafia account since:",
@@ -109,7 +109,39 @@
   "profile_button_custom": "Custom",
   "profile_button_news": "News Notifications",
 
-  "condition_create_error_number": "Sorry, you can't create more than 21 conditions!",
+  "role_create_error_number": ":man_gesturing_no: Sorry, you can't create more than 19 roles!",
+  "role_create_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
+  "role_create_error_noAccess": ":man_gesturing_no: Sorry, you can't take part in the creation of this role!",
+  "role_create_title1": "Role Creation",
+  "role_create_roleName_label": "Name",
+  "role_create_roleName_placeHolder": "your role name",
+  "role_create_roleDescription_label": "Description",
+  "role_create_roleDescription_placeHolder": "your role description; for scripting info see /help → Scripting",
+  "role_create_roleImage_label": "Thumbnail Link",
+  "role_create_roleImage_placeHolder": "a thumbnail image link",
+  "role_create_roleCount_label": "Count",
+  "role_create_roleCount_placeHolder": "count of players with your role; for scripting info see /help → Scripting",
+  "role_create_rolePlaceHolder_label": "Placeholder for the action menu",
+  "role_create_rolePlaceHolder_placeHolder": "your placeholder for the role's action menu",
+  "role_create_goNext_button": "Go Next",
+  "role_create_goNext_message": "Click the button to continue:",
+  "role_create_title2": "Role Creation: ",
+  "role_create_roleAction_label": "Action",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; for details see /help → Scripting",
+  "role_create_roleSelectable_label": "Is self selectable?",
+  "role_create_roleSelectable_placeHolder": "true | false",
+  "role_create_roleDelay_label": "Delay between actions",
+  "role_create_roleDelay_placeHolder": "a delay between your role's actions in days",
+  "role_create_roleSpawnFrom_label": "Minimal count of players to spawn",
+  "role_create_roleSpawnFrom_placeHolder": "a minimal count of players for your role to spawn",
+  "role_create_roleGroupSelection_label": "Does play in a group?",
+  "role_create_roleGroupSelection_placeHolder": "true | false",
+  "role_create_success_message": ":white_check_mark: The role was successfully created:",
+
+  "role_view_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
+  "role_view_error_noAccess": ":man_gesturing_no: Sorry, you can't view this role!",
+
+  "condition_create_error_number": ":man_gesturing_no: Sorry, you can't create more than 21 conditions!",
   "condition_create_title1": "Condition Creation",
   "condition_create_conditionName_label": "Name",
   "condition_create_conditionName_placeHolder": "My mafia victory condition",
@@ -117,41 +149,55 @@
   "condition_create_goNext_message": "Click the button to continue:",
   "condition_create_title2": "Condition Creation: ",
   "condition_create_condition_label": "Condition",
-  "condition_create_condition_placeHolder": "your condition; for more information see _/help -> Scripting_",
+  "condition_create_condition_placeHolder": "your condition; for scripting info see /help → Scripting",
   "condition_create_embedTitle_label": "Title",
   "condition_create_embedTitle_placeHolder": "Mafia wins ;)",
   "condition_create_embedDescription_label": "Description",
   "condition_create_embedDescription_placeHolder": "%Mysteriously the mafia has won...%",
-  "condition_create_embedThumbnail_label": "Thumbnail",
+  "condition_create_embedThumbnail_label": "Thumbnail link",
   "condition_create_embedThumbnail_placeHolder": "a crazy kitty image link",
-  "condition_create_winRole_label": "Winning Role",
+  "condition_create_winRole_label": "Winning role",
   "condition_create_winRole_placeHolder": "just a winning role name",
   "condition_create_success_message": ":white_check_mark: The condition was successfully created:",
 
-  "condition_view_error_notFound": "Condition not found!",
+  "condition_view_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_view_error_noAccess": ":man_gesturing_no: Sorry, you can't view this condition!",
 
   "condition_edit_select_placeHolder": "Select a condition to edit...",
-  "condition_edit_error_notFound": "Condition not found!",
+  "condition_edit_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this condition!",
   "condition_edit_title": "Condition Editing: ",
   "condition_edit_condition_label": "Condition",
-  "condition_edit_condition_placeHolder": "your new condition; for more information see _/help -> Scripting_",
+  "condition_edit_condition_placeHolder": "your new condition; for scripting info see /help → Scripting",
   "condition_edit_embedTitle_label": "Title",
   "condition_edit_embedTitle_placeHolder": "your new title",
   "condition_edit_embedDescription_label": "Description",
-  "condition_edit_embedDescription_placeHolder": "your new description, don't forget about %",
-  "condition_edit_embedThumbnail_label": "Thumbnail",
+  "condition_edit_embedDescription_placeHolder": "your new description; for scripting info see /help → Scripting",
+  "condition_edit_embedThumbnail_label": "Thumbnail link",
   "condition_edit_embedThumbnail_placeHolder": "your new image link",
-  "condition_edit_winRole_label": "Winning Role",
+  "condition_edit_winRole_label": "Winning role",
   "condition_edit_winRole_placeHolder": "your new winning role name",
   "condition_edit_success_message": ":white_check_mark: The condition was successfully edited:",
 
   "condition_delete_select_placeHolder": "Select a condition to delete...",
-  "condition_delete_error_notFound": "Condition not found!",
+  "condition_delete_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Sorry, you can't delete this condition!",
   "condition_delete_success_message": ":ballot_box_with_check: The condition was successfully deleted.",
 
+  "news_error_noAccess_enabled": ":man_gesturing_no: You can't turn on or off news notifications for another person, but you can for yourself!\n:mailbox: You have news notifications enabled. To disable them, open your profile with the </profile:1100344392067338261> command and click the \"**News notifications**\" button.",
+  "news_error_noAccess_disabled": ":man_gesturing_no: You can't turn on or off news notifications for another person, but you can for yourself!\n:mailbox_closed: You have news notifications disabled. To enable them, open your profile with the </profile:1100344392067338261> command and click the \"**News notifications**\" button.",
+  "news_enable_success_message": ":white_check_mark: News notifications were successfully enabled!",
+  "news_disable_success_message": ":ballot_box_with_check: News notifications were successfully disabled.",
+
+  "help_button_rules": "Game Rules",
+  "help_button_scripting": "Scripting",
+  "help_button_helpmessage": "Message to support",
+
+  "helpMessage_title": "Message to Support",
+  "helpMessage_text_label": "Message",
+  "helpMessage_text_placeHolder": "please describe your problem, idea or suggestion :)",
+
+  "error_notInGame": ":man_gesturing_no: You are not in a game right now. But you can always easily create it!",
   "error_premium": "Sorry, you don't have Premium to create custom roles and conditions!",
   "error_unknown": "An error has occurred, please contact the support!",
 
