--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -1,9 +1,10 @@
 {
   "lang_set_success_message": ":united_nations: Язык успешно изменён на русский!",
 
-  "game_error_incorrectGameID": "Игра не найдена! Возможно, она была отменена или закончена.",
+  "game_error_incorrectGameID": ":jigsaw: Игра не найдена! Возможно, она была отменена или закончена.",
   "game_error_alreadyCreated": ":point_up: Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
   "game_error_alreadyJoined": ":point_up: Вы уже присоединились к одной игре, сначала покиньте её!",
+  "game_create_error_notOnServer": ":man_gesturing_no: Извините, игры можно создавать только на сервере!",
   "game_created_title": "Игра создана",
   "game_created_autocancel": "Автоотмена",
   "game_created_gameHost": "Организатор игры",
@@ -108,7 +109,39 @@
   "profile_button_custom": "Кастомизация",
   "profile_button_news": "Уведомления о новостях",
 
-  "condition_create_error_number": "Извините, вы не можете создать больше 21 условия!",
+  "role_create_error_number": ":man_gesturing_no: Извините, вы не можете создать больше 19 ролей!",
+  "role_create_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
+  "role_create_error_noAccess": ":man_gesturing_no: Извините, вы не можете участвовать в создании этой роли!",
+  "role_create_title1": "Создание роли",
+  "role_create_roleName_label": "Название",
+  "role_create_roleName_placeHolder": "название вашей роли",
+  "role_create_roleDescription_label": "Описание",
+  "role_create_roleDescription_placeHolder": "описание вашей роли; информация о создании скриптов в /help → Создание скриптов",
+  "role_create_roleImage_label": "Ссылка на миниатюру",
+  "role_create_roleImage_placeHolder": "ссылка на изображение для миниатюры",
+  "role_create_roleCount_label": "Количество",
+  "role_create_roleCount_placeHolder": "количество игроков с вашей ролью; информация о создании скриптов в /help → Создание скриптов",
+  "role_create_rolePlaceHolder_label": "Плейсхолдер для меню действия",
+  "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню действия вашей роли",
+  "role_create_goNext_button": "Перейти далее",
+  "role_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
+  "role_create_title2": "Создание роли: ",
+  "role_create_roleAction_label": "Действие",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробности в /help → Создание скриптов",
+  "role_create_roleSelectable_label": "Может выбирать себя?",
+  "role_create_roleSelectable_placeHolder": "true | false",
+  "role_create_roleDelay_label": "Задержка между действиями",
+  "role_create_roleDelay_placeHolder": "задержка между действиями вашей роли в днях",
+  "role_create_roleSpawnFrom_label": "Минимальное количество игроков для появления",
+  "role_create_roleSpawnFrom_placeHolder": "минимальное количество игроков для появления вашей роли",
+  "role_create_roleGroupSelection_label": "Играет в группе?",
+  "role_create_roleGroupSelection_placeHolder": "true | false",
+  "role_create_success_message": ":white_check_mark: Роль успешно создана:",
+
+  "role_view_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
+  "role_view_error_noAccess": ":man_gesturing_no: Извините, вы не можете просматривать эту роль!",
+
+  "condition_create_error_number": ":man_gesturing_no: Извините, вы не можете создать больше 21 условия!",
   "condition_create_title1": "Создание условия",
   "condition_create_conditionName_label": "Название",
   "condition_create_conditionName_placeHolder": "Моё условие победы мафии",
@@ -116,41 +149,55 @@
   "condition_create_goNext_message": "Нажмите кнопку, чтобы продолжить:",
   "condition_create_title2": "Создание условия: ",
   "condition_create_condition_label": "Условие",
-  "condition_create_condition_placeHolder": "ваше условие; дополнительная информация в _/help -> Scripting_",
+  "condition_create_condition_placeHolder": "ваше условие; информация о создании скриптов в /help → Создание скриптов",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Побеждает мафия ;)",
   "condition_create_embedDescription_label": "Описание",
   "condition_create_embedDescription_placeHolder": "%Загадочным образом мафия победила...%",
-  "condition_create_embedThumbnail_label": "Миниатюра",
+  "condition_create_embedThumbnail_label": "Ссылка на миниатюру",
   "condition_create_embedThumbnail_placeHolder": "ссылка на изображение с умопомрачительным котёнком",
   "condition_create_winRole_label": "Роль, которая побеждает",
   "condition_create_winRole_placeHolder": "просто название роли, которая побеждает",
   "condition_create_success_message": ":white_check_mark: Условие успешно создано:",
 
-  "condition_view_error_notFound": "Условие не найдено!",
+  "condition_view_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_view_error_noAccess": ":man_gesturing_no: Извините, вы не можете просматривать это условие!",
 
   "condition_edit_select_placeHolder": "Выберите условие для изменения...",
-  "condition_edit_error_notFound": "Условие не найдено!",
+  "condition_edit_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять это условие!",
   "condition_edit_title": "Изменение условия: ",
   "condition_edit_condition_label": "Условие",
-  "condition_edit_condition_placeHolder": "ваше новое условие; дополнительная информация в _/help -> Scripting_",
+  "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /help → Создание скриптов",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "ваш новый заголовок",
   "condition_edit_embedDescription_label": "Описание",
-  "condition_edit_embedDescription_placeHolder": "ваше новое описание, не забудьте про %",
-  "condition_edit_embedThumbnail_label": "Миниатюра",
+  "condition_edit_embedDescription_placeHolder": "ваше новое описание; информация о создании скриптов в /help → Создание скриптов",
+  "condition_edit_embedThumbnail_label": "Ссылка на миниатюру",
   "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
   "condition_edit_winRole_label": "Роль, которая побеждает",
   "condition_edit_winRole_placeHolder": "название вашей новой роли, которая побеждает",
   "condition_edit_success_message": ":white_check_mark: Условие успешно изменено:",
 
   "condition_delete_select_placeHolder": "Выберите условие для удаления...",
-  "condition_delete_error_notFound": "Условие не найдено!",
+  "condition_delete_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Извините, вы не можете удалить это условие!",
   "condition_delete_success_message": ":ballot_box_with_check: Условие успешно удалено.",
 
+  "news_error_noAccess_enabled": ":man_gesturing_no: Вы не можете включать и выключать уведомления о новостях для другого человека, но можете для себя!\n:mailbox: У вас включены уведомления о новостях. Чтобы выключить их, откройте профиль командой </profile:1100344392067338261> и нажмите кнопку «**Уведомления о новостях**».",
+  "news_error_noAccess_disabled": ":man_gesturing_no: Вы не можете включать и выключать уведомления о новостях для другого человека, но можете для себя!\n:mailbox_closed: У вас выключены уведомления о новостях. Чтобы включить их, откройте профиль командой </profile:1100344392067338261> и нажмите кнопку «**Уведомления о новостях**».",
+  "news_enable_success_message": ":white_check_mark: Уведомления о новостях успешно включены!",
+  "news_disable_success_message": ":ballot_box_with_check: Уведомления о новостях успешно выключены.",
+
+  "help_button_rules": "Правила игры",
+  "help_button_scripting": "Создание скриптов",
+  "help_button_helpmessage": "Написать в поддержку",
+
+  "helpMessage_title": "Сообщение в службу поддержки",
+  "helpMessage_text_label": "Сообщение",
+  "helpMessage_text_placeHolder": "опишите свою проблему, идею или предложение :)",
+
+  "error_notInGame": ":man_gesturing_no: Сейчас вы не в игре. Но всегда можете легко создать её!",
   "error_premium": "Извините, у вас нет Premium, чтобы создавать собственные роли и условия!",
   "error_unknown": "Произошла ошибка, пожалуйста, обратитесь в службу поддержки!",
 
