--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,9 +1,10 @@
 {
   "lang_set_success_message": ":flag_ua: Мову успішно змінено на українську!",
 
-  "game_error_incorrectGameID": "Гру не знайдено! Можливо, її було скасовано чи закінчено.",
+  "game_error_incorrectGameID": ":jigsaw: Гру не знайдено! Можливо, її було скасовано чи закінчено.",
   "game_error_alreadyCreated": ":point_up: Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
   "game_error_alreadyJoined": ":point_up: Ви вже приєдналися до однієї гри, спочатку залиште її!",
+  "game_create_error_notOnServer": ":man_gesturing_no: Вибачте, ігри можна створювати лише на сервері!",
   "game_created_title": "Гру створено",
   "game_created_autocancel": "Автоскасування",
   "game_created_gameHost": "Організатор гри",
@@ -106,9 +107,41 @@
   "profile_premium_notPurchased": "не придбано",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомізація",
-  "profile_button_news": "Повідомлення про новини",
+  "profile_button_news": "Сповіщення про новини",
 
-  "condition_create_error_number": "Вибачте, ви не можете створити більше, ніж 21 умову!",
+  "role_create_error_number": ":man_gesturing_no: Вибачте, ви не можете створити більше, ніж 19 ролей!",
+  "role_create_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
+  "role_create_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете брати участь у створенні цієї ролі!",
+  "role_create_title1": "Створення ролі",
+  "role_create_roleName_label": "Назва",
+  "role_create_roleName_placeHolder": "назва вашої ролі",
+  "role_create_roleDescription_label": "Опис",
+  "role_create_roleDescription_placeHolder": "опис вашої ролі; інформація про створення скриптів у /help → Створення скриптів",
+  "role_create_roleImage_label": "Посилання на мініатюру",
+  "role_create_roleImage_placeHolder": "посилання на зображення для мініатюри",
+  "role_create_roleCount_label": "Кількість",
+  "role_create_roleCount_placeHolder": "кількість гравців із вашою роллю; інформація про створення скриптів у /help → Створення скриптів",
+  "role_create_rolePlaceHolder_label": "Плейсхолдер для меню дії",
+  "role_create_rolePlaceHolder_placeHolder": "плейсхолдер для меню дії вашої ролі",
+  "role_create_goNext_button": "Перейти далі",
+  "role_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
+  "role_create_title2": "Створення ролі: ",
+  "role_create_roleAction_label": "Дія",
+  "role_create_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity ; подробиці в /help → Створення скриптів",
+  "role_create_roleSelectable_label": "Чи може обирати себе?",
+  "role_create_roleSelectable_placeHolder": "true | false",
+  "role_create_roleDelay_label": "Затримка між діями",
+  "role_create_roleDelay_placeHolder": "затримка між діями вашої ролі в днях",
+  "role_create_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
+  "role_create_roleSpawnFrom_placeHolder": "мінімальна кількість гравців для появи вашої ролі",
+  "role_create_roleGroupSelection_label": "Чи грає в групі?",
+  "role_create_roleGroupSelection_placeHolder": "true | false",
+  "role_create_success_message": ":white_check_mark: Роль успішно створено:",
+
+  "role_view_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
+  "role_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю роль!",
+
+  "condition_create_error_number": ":man_gesturing_no: Вибачте, ви не можете створити більше, ніж 21 умову!",
   "condition_create_title1": "Створення умови",
   "condition_create_conditionName_label": "Назва",
   "condition_create_conditionName_placeHolder": "Моя умова перемоги мафії",
@@ -116,41 +149,55 @@
   "condition_create_goNext_message": "Натисніть кнопку, щоби продовжити:",
   "condition_create_title2": "Створення умови: ",
   "condition_create_condition_label": "Умова",
-  "condition_create_condition_placeHolder": "ваша умова, додаткова інформація в _/help -> Scripting_",
+  "condition_create_condition_placeHolder": "ваша умова; інформація про створення скриптів у /help → Створення скриптів",
   "condition_create_embedTitle_label": "Заголовок",
   "condition_create_embedTitle_placeHolder": "Перемагає мафія ;)",
   "condition_create_embedDescription_label": "Опис",
   "condition_create_embedDescription_placeHolder": "%Із загадкових причин мафія перемагає...%",
-  "condition_create_embedThumbnail_label": "Мініатюра",
+  "condition_create_embedThumbnail_label": "Посилання на мініатюру",
   "condition_create_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
   "condition_create_winRole_label": "Роль, що перемагає",
   "condition_create_winRole_placeHolder": "просто назва ролі, що перемагає",
   "condition_create_success_message": ":white_check_mark: Умову успішно створено:",
 
-  "condition_view_error_notFound": "Умову не знайдено!",
+  "condition_view_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю умову!",
 
   "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
-  "condition_edit_error_notFound": "Умову не знайдено!",
+  "condition_edit_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю умову!",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
-  "condition_edit_condition_placeHolder": "ваша нова умова, додаткова інформація в _/help -> Scripting_",
+  "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /help → Створення скриптів",
   "condition_edit_embedTitle_label": "Заголовок",
   "condition_edit_embedTitle_placeHolder": "ваш новий заголовок",
   "condition_edit_embedDescription_label": "Опис",
-  "condition_edit_embedDescription_placeHolder": "ваш новий опис, не забудьте про %",
-  "condition_edit_embedThumbnail_label": "Мініатюра",
+  "condition_edit_embedDescription_placeHolder": "ваш новий опис; інформація про створення скриптів у /help → Створення скриптів",
+  "condition_edit_embedThumbnail_label": "Посилання на мініатюру",
   "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
   "condition_edit_winRole_label": "Роль, що перемагає",
   "condition_edit_winRole_placeHolder": "назва вашої нової ролі, що перемагає",
   "condition_edit_success_message": ":white_check_mark: Умову успішно змінено:",
 
   "condition_delete_select_placeHolder": "Оберіть умову для видалення...",
-  "condition_delete_error_notFound": "Умову не знайдено!",
+  "condition_delete_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете видалити цю умову!",
   "condition_delete_success_message": ":ballot_box_with_check: Умову успішно видалено.",
 
+  "news_error_noAccess_enabled": ":man_gesturing_no: Ви не можете вмикати та вимикати сповіщення про новини для іншої людини, але можете для себе!\n:mailbox: У вас увімкнено сповіщення про новини. Щоб вимкнути їх, відкрийте профіль командою </profile:1100344392067338261> та натисніть кнопку «**Сповіщення про новини**».",
+  "news_error_noAccess_disabled": ":man_gesturing_no: Ви не можете вмикати та вимикати сповіщення про новини для іншої людини, але можете для себе!\n:mailbox_closed: У вас вимкнено сповіщення про новини. Щоб увімкнути їх, відкрийте профіль командою </profile:1100344392067338261> та натисніть кнопку «**Сповіщення про новини**».",
+  "news_enable_success_message": ":white_check_mark: Сповіщення про новини успішно ввімкнено!",
+  "news_disable_success_message": ":ballot_box_with_check: Сповіщення про новини успішно вимкнено.",
+
+  "help_button_rules": "Правила гри",
+  "help_button_scripting": "Створення скриптів",
+  "help_button_helpmessage": "Написати до підтримки",
+
+  "helpMessage_title": "Повідомлення до служби підтримки",
+  "helpMessage_text_label": "Повідомлення",
+  "helpMessage_text_placeHolder": "опишіть свою проблему, ідею чи пропозицію :)",
+
+  "error_notInGame": ":man_gesturing_no: Зараз ви не в грі. Але завжди можете легко її створити!",
   "error_premium": "Вибачте, у вас немає Premium, щоб створювати власні ролі та умови!",
   "error_unknown": "Сталася помилка, будь ласка, зверніться до служби підтримки!",
 
