--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -141,6 +141,31 @@
   "role_view_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
   "role_view_error_noAccess": ":man_gesturing_no: Sorry, you can't view this role!",
 
+  "role_edit_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
+  "role_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this role!",
+  "role_edit_select_message": "Please select a role to edit:",
+  "role_edit_select_placeHolder": "Select a role to edit...",
+  "role_edit_selectField_message": "Please select a field to edit:",
+  "role_edit_selectField_placeHolder": "Select a field to edit...",
+  "role_edit_selectField_roleName_label": "Name",
+  "role_edit_selectField_roleDescription_label": "Description",
+  "role_edit_selectField_roleImage_label": "Thumbnail Link",
+  "role_edit_selectField_roleCount_label": "Count",
+  "role_edit_selectField_rolePlaceHolder_label": "Placeholder for the action menu",
+  "role_edit_selectField_roleAction_label": "Action",
+  "role_edit_selectField_roleSelectable_label": "Is self selectable?",
+  "role_edit_selectField_roleDelay_label": "Delay between actions",
+  "role_edit_selectField_roleSpawnFrom_label": "Minimal count of players to spawn",
+  "role_edit_selectField_roleGroupSelection_label": "Does play in a group?",
+  "role_edit_success_message": ":white_check_mark: The role was successfully edited:",
+
+  "role_delete_error_noRoles": "You don't have roles. But you can easily create them!",
+  "role_delete_error_notFound": ":jigsaw: Role not found! It may have been deleted.",
+  "role_delete_error_noAccess": ":man_gesturing_no: Sorry, you can't delete this role!",
+  "role_delete_select_message": "Please select a role to delete:",
+  "role_delete_select_placeHolder": "Select a role to delete...",
+  "role_delete_success_message": ":ballot_box_with_check: The role was successfully deleted.",
+
   "condition_create_error_number": ":man_gesturing_no: Sorry, you can't create more than 21 conditions!",
   "condition_create_title1": "Condition Creation",
   "condition_create_conditionName_label": "Name",
@@ -163,9 +188,10 @@
   "condition_view_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_view_error_noAccess": ":man_gesturing_no: Sorry, you can't view this condition!",
 
-  "condition_edit_select_placeHolder": "Select a condition to edit...",
   "condition_edit_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Sorry, you can't edit this condition!",
+  "condition_edit_select_message": "Please select a condition to edit:",
+  "condition_edit_select_placeHolder": "Select a condition to edit...",
   "condition_edit_title": "Condition Editing: ",
   "condition_edit_condition_label": "Condition",
   "condition_edit_condition_placeHolder": "your new condition; for scripting info see /help → Scripting",
@@ -179,9 +205,11 @@
   "condition_edit_winRole_placeHolder": "your new winning role name",
   "condition_edit_success_message": ":white_check_mark: The condition was successfully edited:",
 
-  "condition_delete_select_placeHolder": "Select a condition to delete...",
+  "condition_delete_error_noConditions": "You don't have conditions. But you can easily create them!",
   "condition_delete_error_notFound": ":jigsaw: Condition not found! It may have been deleted.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Sorry, you can't delete this condition!",
+  "condition_delete_select_message": "Please select a condition to delete:",
+  "condition_delete_select_placeHolder": "Select a condition to delete...",
   "condition_delete_success_message": ":ballot_box_with_check: The condition was successfully deleted.",
 
   "news_error_noAccess_enabled": ":man_gesturing_no: You can't turn on or off news notifications for another person, but you can for yourself!\n:mailbox: You have news notifications enabled. To disable them, open your profile with the </profile:1100344392067338261> command and click the \"**News notifications**\" button.",
