--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -141,6 +141,31 @@
   "role_view_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
   "role_view_error_noAccess": ":man_gesturing_no: Извините, вы не можете просматривать эту роль!",
 
+  "role_edit_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
+  "role_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять эту роль!",
+  "role_edit_select_message": "Выберите роль для изменения:",
+  "role_edit_select_placeHolder": "Выберите роль для изменения...",
+  "role_edit_selectField_message": "Выберите поле для изменения:",
+  "role_edit_selectField_placeHolder": "Выберите поле для изменения...",
+  "role_edit_selectField_roleName_label": "Название",
+  "role_edit_selectField_roleDescription_label": "Описание",
+  "role_edit_selectField_roleImage_label": "Ссылка на миниатюру",
+  "role_edit_selectField_roleCount_label": "Количество",
+  "role_edit_selectField_rolePlaceHolder_label": "Плейсхолдер для меню действия",
+  "role_edit_selectField_roleAction_label": "Действие",
+  "role_edit_selectField_roleSelectable_label": "Может выбирать себя?",
+  "role_edit_selectField_roleDelay_label": "Задержка между действиями",
+  "role_edit_selectField_roleSpawnFrom_label": "Минимальное количество игроков для появления",
+  "role_edit_selectField_roleGroupSelection_label": "Играет в группе?",
+  "role_edit_success_message": ":white_check_mark: Роль успешно изменена:",
+
+  "role_delete_error_noRoles": "У вас нет ролей. Но вы легко можете их создать!",
+  "role_delete_error_notFound": ":jigsaw: Роль не найдена! Возможно, она была удалена.",
+  "role_delete_error_noAccess": ":man_gesturing_no: Извините, вы не можете удалить эту роль!",
+  "role_delete_select_message": "Выберите роль для удаления:",
+  "role_delete_select_placeHolder": "Выберите роль для удаления...",
+  "role_delete_success_message": ":ballot_box_with_check: Роль успешно удалена.",
+
   "condition_create_error_number": ":man_gesturing_no: Извините, вы не можете создать больше 21 условия!",
   "condition_create_title1": "Создание условия",
   "condition_create_conditionName_label": "Название",
@@ -163,9 +188,10 @@
   "condition_view_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_view_error_noAccess": ":man_gesturing_no: Извините, вы не можете просматривать это условие!",
 
-  "condition_edit_select_placeHolder": "Выберите условие для изменения...",
   "condition_edit_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Извините, вы не можете изменять это условие!",
+  "condition_edit_select_message": "Выберите условие для изменения:",
+  "condition_edit_select_placeHolder": "Выберите условие для изменения...",
   "condition_edit_title": "Изменение условия: ",
   "condition_edit_condition_label": "Условие",
   "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /help → Создание скриптов",
@@ -179,9 +205,11 @@
   "condition_edit_winRole_placeHolder": "название вашей новой роли, которая побеждает",
   "condition_edit_success_message": ":white_check_mark: Условие успешно изменено:",
 
-  "condition_delete_select_placeHolder": "Выберите условие для удаления...",
+  "condition_delete_error_noConditions": "У вас нет условий. Но вы легко можете их создать!",
   "condition_delete_error_notFound": ":jigsaw: Условие не найдено! Возможно, оно было удалено.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Извините, вы не можете удалить это условие!",
+  "condition_delete_select_message": "Выберите условие для удаления:",
+  "condition_delete_select_placeHolder": "Выберите условие для удаления...",
   "condition_delete_success_message": ":ballot_box_with_check: Условие успешно удалено.",
 
   "news_error_noAccess_enabled": ":man_gesturing_no: Вы не можете включать и выключать уведомления о новостях для другого человека, но можете для себя!\n:mailbox: У вас включены уведомления о новостях. Чтобы выключить их, откройте профиль командой </profile:1100344392067338261> и нажмите кнопку «**Уведомления о новостях**».",
