--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -141,6 +141,31 @@
   "role_view_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
   "role_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю роль!",
 
+  "role_edit_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
+  "role_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю роль!",
+  "role_edit_select_message": "Оберіть роль для змінення:",
+  "role_edit_select_placeHolder": "Оберіть роль для змінення...",
+  "role_edit_selectField_message": "Оберіть поле для змінення:",
+  "role_edit_selectField_placeHolder": "Оберіть поле для змінення...",
+  "role_edit_selectField_roleName_label": "Назва",
+  "role_edit_selectField_roleDescription_label": "Опис",
+  "role_edit_selectField_roleImage_label": "Посилання на мініатюру",
+  "role_edit_selectField_roleCount_label": "Кількість",
+  "role_edit_selectField_rolePlaceHolder_label": "Плейсхолдер для меню дії",
+  "role_edit_selectField_roleAction_label": "Дія",
+  "role_edit_selectField_roleSelectable_label": "Чи може обирати себе?",
+  "role_edit_selectField_roleDelay_label": "Затримка між діями",
+  "role_edit_selectField_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
+  "role_edit_selectField_roleGroupSelection_label": "Чи грає в групі?",
+  "role_edit_success_message": ":white_check_mark: Роль успішно змінено:",
+
+  "role_delete_error_noRoles": "У вас немає ролей. Але ви легко можете створити їх!",
+  "role_delete_error_notFound": ":jigsaw: Роль не знайдено! Можливо, її було видалено.",
+  "role_delete_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете видалити цю роль!",
+  "role_delete_select_message": "Оберіть роль для видалення:",
+  "role_delete_select_placeHolder": "Оберіть роль для видалення...",
+  "role_delete_success_message": ":ballot_box_with_check: Роль успішно видалено.",
+
   "condition_create_error_number": ":man_gesturing_no: Вибачте, ви не можете створити більше, ніж 21 умову!",
   "condition_create_title1": "Створення умови",
   "condition_create_conditionName_label": "Назва",
@@ -163,9 +188,10 @@
   "condition_view_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_view_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете переглядати цю умову!",
 
-  "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_edit_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете змінювати цю умову!",
+  "condition_edit_select_message": "Оберіть умову для змінення:",
+  "condition_edit_select_placeHolder": "Оберіть умову для змінення...",
   "condition_edit_title": "Змінення умови: ",
   "condition_edit_condition_label": "Умова",
   "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /help → Створення скриптів",
@@ -179,9 +205,11 @@
   "condition_edit_winRole_placeHolder": "назва вашої нової ролі, що перемагає",
   "condition_edit_success_message": ":white_check_mark: Умову успішно змінено:",
 
-  "condition_delete_select_placeHolder": "Оберіть умову для видалення...",
+  "condition_delete_error_noConditions": "У вас немає умов. Але ви легко можете створити їх!",
   "condition_delete_error_notFound": ":jigsaw: Умову не знайдено! Можливо, її було видалено.",
   "condition_delete_error_noAccess": ":man_gesturing_no: Вибачте, ви не можете видалити цю умову!",
+  "condition_delete_select_message": "Оберіть умову для видалення:",
+  "condition_delete_select_placeHolder": "Оберіть умову для видалення...",
   "condition_delete_success_message": ":ballot_box_with_check: Умову успішно видалено.",
 
   "news_error_noAccess_enabled": ":man_gesturing_no: Ви не можете вмикати та вимикати сповіщення про новини для іншої людини, але можете для себе!\n:mailbox: У вас увімкнено сповіщення про новини. Щоб вимкнути їх, відкрийте профіль командою </profile:1100344392067338261> та натисніть кнопку «**Сповіщення про новини**».",
