add new profile command features

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -120,7 +120,7 @@
   "role_create_roleImage_label": "Thumbnail Link",
   "role_create_roleImage_placeHolder": "a thumbnail image link",
   "role_create_roleCount_label": "Count",
-  "role_create_roleCount_placeHolder": "count of players with your role; for scripting info see /help → Scripting",
+  "role_create_roleCount_placeHolder": "a count of players with your role; for scripting info see /help → Scripting",
   "role_create_rolePlaceHolder_label": "Placeholder for the action menu",
   "role_create_rolePlaceHolder_placeHolder": "your placeholder for the role's action menu",
   "role_create_goNext_button": "Go Next",
@@ -157,6 +157,27 @@
   "role_edit_selectField_roleDelay_label": "Delay between actions",
   "role_edit_selectField_roleSpawnFrom_label": "Minimal count of players to spawn",
   "role_edit_selectField_roleGroupSelection_label": "Does play in a group?",
+  "role_edit_title": "Role Editing: ",
+  "role_edit_roleName_label": "Name",
+  "role_edit_roleName_placeHolder": "your new role name",
+  "role_edit_roleDescription_label": "Description",
+  "role_edit_roleDescription_placeHolder": "your new role description; for scripting info see /help → Scripting",
+  "role_edit_roleImage_label": "Thumbnail Link",
+  "role_edit_roleImage_placeHolder": "your new image link",
+  "role_edit_roleCount_label": "Count",
+  "role_edit_roleCount_placeHolder": "a new count of players with your role",
+  "role_edit_rolePlaceHolder_label": "Placeholder for the action menu",
+  "role_edit_rolePlaceHolder_placeHolder": "your new placeholder for the role's action menu",
+  "role_edit_roleAction_label": "Action",
+  "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
+  "role_edit_roleSelectable_label": "Is self selectable?",
+  "role_edit_roleSelectable_placeHolder": "true | false",
+  "role_edit_roleDelay_label": "Delay between actions",
+  "role_edit_roleDelay_placeHolder": "a new delay between your role's actions in days",
+  "role_edit_roleSpawnFrom_label": "Minimal count of players to spawn",
+  "role_edit_roleSpawnFrom_placeHolder": "a new minimal count of players for your role to spawn",
+  "role_edit_roleGroupSelection_label": "Does play in a group?",
+  "role_edit_roleGroupSelection_placeHolder": "true | false",
   "role_edit_success_message": ":white_check_mark: The role was successfully edited:",
 
   "role_delete_error_noRoles": "You don't have roles. But you can easily create them!",
@@ -196,9 +217,9 @@
   "condition_edit_condition_label": "Condition",
   "condition_edit_condition_placeHolder": "your new condition; for scripting info see /help → Scripting",
   "condition_edit_embedTitle_label": "Title",
-  "condition_edit_embedTitle_placeHolder": "your new title",
+  "condition_edit_embedTitle_placeHolder": "a new title of your condition",
   "condition_edit_embedDescription_label": "Description",
-  "condition_edit_embedDescription_placeHolder": "your new description; for scripting info see /help → Scripting",
+  "condition_edit_embedDescription_placeHolder": "a new description of your condition; for scripting info see /help → Scripting",
   "condition_edit_embedThumbnail_label": "Thumbnail link",
   "condition_edit_embedThumbnail_placeHolder": "your new image link",
   "condition_edit_winRole_label": "Winning role",
