--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -157,6 +157,27 @@
   "role_edit_selectField_roleDelay_label": "Задержка между действиями",
   "role_edit_selectField_roleSpawnFrom_label": "Минимальное количество игроков для появления",
   "role_edit_selectField_roleGroupSelection_label": "Играет в группе?",
+  "role_edit_title": "Изменение роли: ",
+  "role_edit_roleName_label": "Название",
+  "role_edit_roleName_placeHolder": "новое название вашей роли",
+  "role_edit_roleDescription_label": "Описание",
+  "role_edit_roleDescription_placeHolder": "новое описание вашей роли; информация о создании скриптов в /help → Создание скриптов",
+  "role_edit_roleImage_label": "Ссылка на миниатюру",
+  "role_edit_roleImage_placeHolder": "ссылка на ваше новое изображение",
+  "role_edit_roleCount_label": "Количество",
+  "role_edit_roleCount_placeHolder": "новое количество игроков с вашей ролью",
+  "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню действия",
+  "role_edit_rolePlaceHolder_placeHolder": "новый плейсхолдер для меню действия вашей роли",
+  "role_edit_roleAction_label": "Действие",
+  "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
+  "role_edit_roleSelectable_label": "Может выбирать себя?",
+  "role_edit_roleSelectable_placeHolder": "true | false",
+  "role_edit_roleDelay_label": "Задержка между действиями",
+  "role_edit_roleDelay_placeHolder": "новая задержка между действиями вашей роли в днях",
+  "role_edit_roleSpawnFrom_label": "Минимальное количество игроков для появления",
+  "role_edit_roleSpawnFrom_placeHolder": "новое минимальное количество игроков для появления вашей роли",
+  "role_edit_roleGroupSelection_label": "Играет в группе?",
+  "role_edit_roleGroupSelection_placeHolder": "true | false",
   "role_edit_success_message": ":white_check_mark: Роль успешно изменена:",
 
   "role_delete_error_noRoles": "У вас нет ролей. Но вы легко можете их создать!",
@@ -196,9 +217,9 @@
   "condition_edit_condition_label": "Условие",
   "condition_edit_condition_placeHolder": "ваше новое условие; информация о создании скриптов в /help → Создание скриптов",
   "condition_edit_embedTitle_label": "Заголовок",
-  "condition_edit_embedTitle_placeHolder": "ваш новый заголовок",
+  "condition_edit_embedTitle_placeHolder": "новый заголовок вашего условия",
   "condition_edit_embedDescription_label": "Описание",
-  "condition_edit_embedDescription_placeHolder": "ваше новое описание; информация о создании скриптов в /help → Создание скриптов",
+  "condition_edit_embedDescription_placeHolder": "новое описание вашего условия; информация о создании скриптов в /help → Создание скриптов",
   "condition_edit_embedThumbnail_label": "Ссылка на миниатюру",
   "condition_edit_embedThumbnail_placeHolder": "ссылка на ваше новое изображение",
   "condition_edit_winRole_label": "Роль, которая побеждает",
