--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -157,6 +157,27 @@
   "role_edit_selectField_roleDelay_label": "Затримка між діями",
   "role_edit_selectField_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
   "role_edit_selectField_roleGroupSelection_label": "Чи грає в групі?",
+  "role_edit_title": "Змінення ролі: ",
+  "role_edit_roleName_label": "Назва",
+  "role_edit_roleName_placeHolder": "нова назва вашої ролі",
+  "role_edit_roleDescription_label": "Опис",
+  "role_edit_roleDescription_placeHolder": "новий опис вашої ролі; інформація про створення скриптів у /help → Створення скриптів",
+  "role_edit_roleImage_label": "Посилання на мініатюру",
+  "role_edit_roleImage_placeHolder": "посилання на ваше нове зображення",
+  "role_edit_roleCount_label": "Кількість",
+  "role_edit_roleCount_placeHolder": "нова кількість гравців із вашою роллю",
+  "role_edit_rolePlaceHolder_label": "Плейсхолдер для меню дії",
+  "role_edit_rolePlaceHolder_placeHolder": "новий плейсхолдер для меню дії вашої ролі",
+  "role_edit_roleAction_label": "Дія",
+  "role_edit_roleAction_placeHolder": "kill | heal | alibi | check | full_check | no_activity",
+  "role_edit_roleSelectable_label": "Чи може обирати себе?",
+  "role_edit_roleSelectable_placeHolder": "true | false",
+  "role_edit_roleDelay_label": "Затримка між діями",
+  "role_edit_roleDelay_placeHolder": "нова затримка між діями вашої ролі в днях",
+  "role_edit_roleSpawnFrom_label": "Мінімальна кількість гравців для появи",
+  "role_edit_roleSpawnFrom_placeHolder": "нова мінімальна кількість гравців для появи вашої ролі",
+  "role_edit_roleGroupSelection_label": "Чи грає в групі?",
+  "role_edit_roleGroupSelection_placeHolder": "true | false",
   "role_edit_success_message": ":white_check_mark: Роль успішно змінено:",
 
   "role_delete_error_noRoles": "У вас немає ролей. Але ви легко можете створити їх!",
@@ -196,9 +217,9 @@
   "condition_edit_condition_label": "Умова",
   "condition_edit_condition_placeHolder": "ваша нова умова; інформація про створення скриптів у /help → Створення скриптів",
   "condition_edit_embedTitle_label": "Заголовок",
-  "condition_edit_embedTitle_placeHolder": "ваш новий заголовок",
+  "condition_edit_embedTitle_placeHolder": "новий заголовок вашої умови",
   "condition_edit_embedDescription_label": "Опис",
-  "condition_edit_embedDescription_placeHolder": "ваш новий опис; інформація про створення скриптів у /help → Створення скриптів",
+  "condition_edit_embedDescription_placeHolder": "новий опис вашої умови; інформація про створення скриптів у /help → Створення скриптів",
   "condition_edit_embedThumbnail_label": "Посилання на мініатюру",
   "condition_edit_embedThumbnail_placeHolder": "посилання на ваше нове зображення",
   "condition_edit_winRole_label": "Роль, що перемагає",
